--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,16 +18,26 @@ spring:
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 958180173202-sii4epowero1eouvvjrlrnt27sikub08k.apps.googleusercontent.com
+            client-secret: k0asdfag801WdcJF8k9ST_8SG9
+          facebook:
+            client-id: 11612612521462
+            client-secret: 6578235217c5c365a98c51b02d0308ac
+custom:
+  oauth2:
+    kakao:
+      client-id:
+      client-secret: jpXULoEzrasfawegsqYXlRLyyOHn2i60q
+    naver:
+      client-id: B5yvH3Zaweyawerawwe6repj4z0L
+      client-secret: sArXFasdfawef
 
 logging:
   level:
     org.hibernate.SQL: debug
   # org.hibernate.type: trace
-
-kakao:
-  client:
-    clientId:
-    accessTokenUri: https://kauth.kakao.com/oauth/token
-    userAuthorizationUri: https://kauth.kakao.com/oauth/authorize
-  resource:
-    userInfoUri: https://kapi.kakao.com/v1/user/me
